# VideoLib

./: CMakeLists.txt  README.md
Test/: VideoPlayer.cpp  VideoPlayerTest.cpp  VideoStreamer.cpp  VideoStreamerTest.cpp
Utility/: Frame.cpp  Frame.hpp
VideoLib/Utility/: Frame.cpp  Frame.hpp  Packet.cpp  Packet.hpp
VideoLib/VideoPlayer/: VideoPlayer.cpp  VideoPlayer.hpp
VideoLib/VideoStreamer/: VideoStreamer.cpp  VideoStreamer.hpp
VideoPlayer/: VideoPlayer.cpp  VideoPlayer.hpp
cmake/: FindFFmpeg.cmake  VideoLibConfig.cmake.in
